# CP2107_rust

./: Cargo.toml
src/: cq.rs  main.rs  ntt.rs
