[package]
name = "cq"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = "0.4"
ark-ec = "0.4"
ark-bls12-381 = "0.4"
ark-std = "0.4"
rand = "0.8"
ark-poly-commit = "0.4"
log = "0.4.27"

[[bin]]
name = "main"
path = "src/main.rs"

[profile.dev]
opt-level = 2
debug = true
overflow-checks = false
lto = false

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
